--- a/templates/django_tables2/daisyui5.html
+++ b/templates/django_tables2/daisyui5.html
@@ -108,7 +108,7 @@
                         {{ table.page.start_index|default:0 }}–{{ table.page.end_index|default:0 }}
                     </strong>
                     de
-                    <strong>{{ table.page.paginator.count|default:0 }}</strong>
+                    <strong>{{ table.paginator.count|default:0 }}</strong>
                     registros
                 </span>
             </div>
