Ajuste paginacion Directorio y formulario paquetes destajos

--- a/static/css/input.css
+++ b/static/css/input.css
@@ -506,3 +506,8 @@ html {
 .select2-container {
     min-width: 0 !important;
 }
+
+.is-invalid .select2-selection,
+.needs-validation ~ span > .select2-dropdown {
+    border-color: red !important;
+}
