--- a/templates/apps/directorio/list.html
+++ b/templates/apps/directorio/list.html
@@ -63,19 +63,19 @@
         <!-- PAGINACIÓN -->
         <div class="mt-6 flex justify-center space-x-2">
             {% if page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-sm btn-outline">Anterior</a>
+                <a href="{% querystring 'page'=page_obj.previous_page_number %}" class="btn btn-sm btn-outline">Anterior</a>
             {% endif %}
 
             {% for num in page_obj.paginator.page_range %}
                 {% if num == page_obj.number %}
                     <span class="btn btn-sm btn-primary">{{ num }}</span>
                 {% else %}
-                    <a href="?page={{ num }}" class="btn btn-sm btn-outline">{{ num }}</a>
+                    <a href="{% querystring 'page'=num %}" class="btn btn-sm btn-outline">{{ num }}</a>
                 {% endif %}
             {% endfor %}
 
             {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="btn btn-sm btn-outline">Siguiente</a>
+                <a href="{% querystring 'page'=page_obj.next_page_number %}" class="btn btn-sm btn-outline">Siguiente</a>
             {% endif %}
         </div>
     {% else %}
